feature(post_bid): add route and tests
