# server/src/routes/bids/types.ts
@@ -1,0 +1,14 @@
+
+export enum BidTypes {
+  SELL = 'sell',
+  BUY = 'BUY'
+}
+
+export interface Bid {
+  id: string;
+  userId: string;
+  sessionId: string;
+  type: BidTypes;
+  volume: number;
+  price: number;
+  }
